Added: login  view

--- a/2-email.html
+++ b/2-email.html
@@ -33,6 +33,7 @@
       .form-container {
         display: grid;
         grid-template-rows: auto 1fr auto;
+        width: 90%;
         padding-left: 8px;
         padding-right: 8px;
       }
