Added: home view

--- a/5-account-edit.html
+++ b/5-account-edit.html
@@ -39,7 +39,7 @@
 
         }
 
-        .nav-bar {
+        .menu {
             border: 1px solid var(--shadow);
             width: 100%;
             height: 30px;
@@ -109,14 +109,14 @@
 <body>
     <div class="account">
         
-        <nav class="nav-bar">
+        <menu class="menu">
             <button class="side-browser">
                 <img src="./Platzi_YardSale_Icons/icon_menu.svg"></img>
             </button>
             <img src="./Platzi_YardSale_Logos/logo_yard_sale.svg" <button class="shopping-cart">
             <img src="./Platzi_YardSale_Icons/icon_shopping_cart_notification.svg"></img>
             </button>
-        </nav>
+        </menu>
         <div class="view-container">
 
 
