--- a/5-account-edit.html
+++ b/5-account-edit.html
@@ -17,7 +17,7 @@
             --very-light-pink: #c7c7c7;
             --text-input-field: #f7f7f7;
             --hospital-green: #acd9b2;
-            --shadow: rgba(0, 0, 0, 0.19);
+            --shadow: rgba(199, 199, 199, 0.19);
             --primary: #2ecc71;
             --sm: 14px;
             --md: 16px;
@@ -40,7 +40,7 @@
         }
 
         .menu {
-            border: 1px solid var(--shadow);
+            border-bottom: 1px solid var(--shadow);
             width: 100%;
             height: 30px;
             padding: 8px;
