--- a/6-home.html
+++ b/6-home.html
@@ -38,7 +38,7 @@
         }
 
         .menu {
-            border: 1px solid var(--shadow);
+            border-bottom: 1px solid var(--shadow);
             width: 100%;
             height: 30px;
             padding: 8px;
