Added: navigation bar view

--- a/4-account-create.html
+++ b/4-account-create.html
@@ -39,7 +39,7 @@
 
         }
 
-        .menu {
+        .nav-bar {
             border-bottom: 1px solid var(--shadow);
             width: 100%;
             height: 30px;
@@ -109,9 +109,9 @@
 
 <body>
     <div class="account">
-        <menu class="menu">
+        <menu class="nav-bar">
             <button class="side-browser">
-                <img src="./Platzi_YardSale_Icons/icon_menu.svg"></img>
+                <img src="./Platzi_YardSale_Icons/icon_menu.svg" alt="menu"></img>
             </button>
             <img src="./Platzi_YardSale_Logos/logo_yard_sale.svg" <button class="shopping-cart">
             <img src="./Platzi_YardSale_Icons/icon_shopping_cart_notification.svg"></img>
