--- a/5-account-edit.html
+++ b/5-account-edit.html
@@ -30,7 +30,7 @@
             padding-left: 8px;
             padding-right: 8px;
         }
-        
+
         .view-container {
             width: 100%;
             height: 100vh;
@@ -39,7 +39,7 @@
 
         }
 
-        .menu {
+        .nav-bar {
             border-bottom: 1px solid var(--shadow);
             width: 100%;
             height: 30px;
@@ -108,10 +108,10 @@
 
 <body>
     <div class="account">
-        
-        <menu class="menu">
+
+        <menu class="nav-bar">
             <button class="side-browser">
-                <img src="./Platzi_YardSale_Icons/icon_menu.svg"></img>
+                <img src="./Platzi_YardSale_Icons/icon_menu.svg" alt="menu"></img>
             </button>
             <img src="./Platzi_YardSale_Logos/logo_yard_sale.svg" <button class="shopping-cart">
             <img src="./Platzi_YardSale_Icons/icon_shopping_cart_notification.svg"></img>
@@ -130,7 +130,7 @@
                 <p id="email" class="value" type="email">mdiaz@gmail.com</p>
 
                 <label for="password" class="label">Password</label>
-                <p id="password" class="value" type="password" >********</p>
+                <p id="password" class="value" type="password">********</p>
 
                 <button type="submit" class="seccondary-button edit-button">
                     Eddit
