--- a/6-home.html
+++ b/6-home.html
@@ -25,7 +25,6 @@
 
         body {
             font-family: 'Quicksand', sans-serif;
-            margin: 0;
         }
 
         .home {
@@ -37,7 +36,7 @@
             padding-right: 8px;
         }
 
-        .menu {
+        .nav-bar {
             border-bottom: 1px solid var(--shadow);
             width: 100%;
             height: 30px;
@@ -91,7 +90,7 @@
         .product-info {
             display: flex;
             justify-content: space-between;
-   
+
         }
 
         .product-info figure {
@@ -112,12 +111,12 @@
         }
 
         @media (max-width: 634px) {
-                .cards-container {
-                    display: grid;
-                    grid-template-columns: repeat(auto-fill, 140px);
-                    gap: 28px;
-                    place-content: center;
-                }
+            .cards-container {
+                display: grid;
+                grid-template-columns: repeat(auto-fill, 140px);
+                gap: 28px;
+                place-content: center;
+            }
 
             .product-card {
                 width: 140px;
@@ -135,9 +134,9 @@
 
 <body>
     <div class="home">
-        <menu class="menu">
+        <menu class="nav-bar">
             <button class="side-browser">
-                <img src="./Platzi_YardSale_Icons/icon_menu.svg"></img>
+                <img src="./Platzi_YardSale_Icons/icon_menu.svg" alt="menu"></img>
             </button>
             <img src="./Platzi_YardSale_Logos/logo_yard_sale.svg" <button class="shopping-cart">
             <img src="./Platzi_YardSale_Icons/icon_shopping_cart_notification.svg"></img>
